[package]
name = "jemini"
license = "MIT"
version = "0.1.0"
edition = "2021"
publish = true
description = "TBC"
authors = ["jer"]


[dependencies]
dotenv = "0.15.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
